Normalize line endings

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -21,7 +21,7 @@
      <!-- boxicon -->
      <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" style="background-color: black;">
     {% include 'navbar.html' %}
 
     {% block content %}
