--- a/myapp/templates/projects.html
+++ b/myapp/templates/projects.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <body class="d-flex flex-column h-100 bg-light">
     <main class="flex-shrink-0">
@@ -9,25 +10,33 @@
                 <div class="text-center mb-5">
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
                 </div>
+
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Project Card 1-->
                         <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                             <div class="card-body p-0">
-                                <div class="d-flex align-items-center">
-                                    <div class="p-5">
+                                <div class="row align-items-center">
+                                    <div class="col-12 col-md-7 p-5">
                                         <h2 class="fw-bolder">E commerce website</h2>
-                                        <p>I created a simple E commerce website using django. It was my first fullstack project</p>
+                                        <p>I created a simple E commerce website using Django. It was my first fullstack project.</p>
+                                        <span>
+                                            <a class="text-gradient" href="https://github.com/Enjanurr/kape.git" target="_blank">
+                                                Link to my GitHub <i class="bi bi-github"></i>
+                                            </a>
+                                        </span>
                                     </div>
-                                    <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                    <div class="col-12 col-md-5">
+                                        <img class="img-fluid w-100" src="{% static 'assets/coffee.png' %}" alt="E-commerce website project screenshot" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <!-- Project Card 2 removed -->
-                       
                     </div>
                 </div>
-            </div>
+                
+            
         </section>
         <!-- Call to action section-->
         <section class="py-5 bg-gradient-primary-to-secondary text-white">
